AM-187 Topic: attach schema to a topic && AM-188 Topic: dettach schema to a topic
